# cicq

./: .gitmodules  CMakeLists.txt  README.md
include/cicq/: chatroom.h  client_com.h  json_wrapper.h  server_proc.h  status_code.h
src/: chat.c  chatroom.c  client_com.c  client_main.c  client_main.cc  json_wrapper.c  server_main.c  server_main.cc  server_proc.c
